# aot

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  builddata.sh  buildsoft.sh  clean.sh  readme  todo.txt
Dicts/Morph/: CMakeLists.txt
Source/: CMakeLists.txt  LemmatizerNET.sln  Morpology.sln  Translator.sln
Source/AgramtabLib/: AgramtabLib.vcproj  CMakeLists.txt  EngGramTab.cpp  EngGramTab.h  GerGramTab.cpp  GerGramTab.h  RusGramTab.cpp  RusGramTab.h  agramtab_.cpp  agramtab_.h  eng_consts.h  ger_consts.h  rus_consts.h
Source/AprDictGen/: AprDictGen.vcproj  CMakeLists.txt  Makefile  main.cpp
Source/AprRead/: all_labels.h
Source/Bigrams/: Bigrams.cpp  Bigrams.vcproj  CMakeLists.txt  Makefile
Source/BigramsCGI/: CMakeLists.txt  Makefile
Source/BinaryDictsClient/: CMakeLists.txt  Main.cpp  Makefile
Source/BinaryDictsLib/: AspPairDict.cpp  AspPairDict.h  BinaryDictionary.cpp  BinaryDictionary.h  CMakeLists.txt  DerivDict.cpp  DerivDict.h  FreqDict.cpp  FreqDict.h  ParadigmPairFreq.h  SetOfWordPairs.cpp  SetOfWordPairs.h  SynDictionary.cpp  SynDictionary.h
Source/CheckGramTab/: CheckGramTab.cpp
Source/Checker/: CMakeLists.txt  Checker.cpp  Checker.h  CheckerDlg.cpp  CheckerDlg.h  GriThrPB.cpp  ProceedDlg.cpp  ProceedDlg.h  StdAfx.cpp  StdAfx.h  resource.h
Source/ConvertToLemma/: CMakeLists.txt  ConvertToLemma.cpp
Source/ConvertTrigramBinary/: CMakeLists.txt  ConvertTrigramBinary.vcproj  main.cpp
Source/Demo/: CMakeLists.txt  Splash.cpp  Splash.h  StdAfx.h  demo.cpp  demo.h  demo.vcproj  demoDlg.cpp  demoDlg.h
Source/EngSynanLib/: CMakeLists.txt  EngOborDic.h  EngSynanLib.vcproj  EngSyntaxOpt.cpp  EngSyntaxOpt.h
Source/FileLem/: CMakeLists.txt  FileLem.cpp  FileLem.vcproj  Makefile
Source/GenFreqDict/: CMakeLists.txt  GenFreqDict.vcproj  main.cpp
Source/GenSynDict/: GenSynDict.cpp  GenSynDict.vcproj  Makefile
Source/GerPostMorph/: CMakeLists.txt  GermanPostMorph.cpp  Makefile
Source/GerSynanLib/: Additions.cpp  AdjNomen.cpp  CMakeLists.txt  GLRFormats.cpp  GerAnalytical.cpp  GerBaseRules.cpp  GerBuildInitialClauses.cpp  GerGeo.cpp  GerOborot.cpp  GerSentence.cpp  GerSentence.h  GerSubject.cpp  GerSynan.vcproj  GerSynanLib.vcproj  GerSyntaxOpt.cpp  GerSyntaxOpt.h  GerThesaurus.cpp  GerWord.cpp  GerWord.h  Makefile  Numeralia.cpp  SimilarNP.cpp  Verb.cpp  prepositions.cpp
Source/GraphanLib/: CMakeLists.txt  C_desc.cpp  Consent.cpp  Consent.h  Cs_hiera.cpp  GraphanDicts.cpp  GraphanDicts.h  GraphmatFile.cpp  GraphmatFile.h  HTMLConv.h  HtmlConv.cpp  Nc_desc.cpp  Oborots.cpp  Sentences.cpp  UnitHolder.cpp  UnitHolder.h  Writegra.cpp  abbrev.cpp  abbrev.h  graline.cpp  graline.h  graphan.html
Source/GraphmatThick/: CMakeLists.txt  GraphmatThick.cpp  GraphmatThick.vcproj  Makefile
Source/JNIMorphAPI/: CMakeLists.txt  JNIMorphAPI.cpp  Makefile
Source/JNIMorphAPITest/: CMakeLists.txt  Makefile
Source/JVisualSynan/: JVSynAn.htm
Source/Lemmatizer/: CMakeLists.txt  ComLemmatizers.cpp  ComLemmatizers.h  ComParadigm.cpp  ComParadigm.h  ComPlmLineCollection.cpp  ComPlmLineCollection.h  Lemmatizer.cpp  Lemmatizer.vcproj  StdAfx.h  dlldata.c
Source/LemmatizerLib/: CMakeLists.txt  CreatePredictionBase.cpp  LemmaInfoSerialize.h  LemmatizerLib.vcproj  Lemmatizers.cpp  Lemmatizers.h  Makefile  MorhologyHolder.cpp  MorphAutomBuilder.cpp  MorphAutomBuilder.h  MorphAutomat.cpp  MorphAutomat.h  MorphDict.cpp  MorphDict.h  MorphDictBuilder.cpp  MorphDictBuilder.h  Morphan.cpp  Morphan.h  MorphologyHolder.h  PLMLineCollection.cpp  PLMLineCollection.h  Paradigm.cpp  Paradigm.h  Predict.cpp  Predict.h  StaticVectorMap.h  Statistic.cpp  Statistic.h  StdMorph.h
Source/LemmatizerNET/: FileManager.cs  ILemmatizer.cs
Source/MAPost/: CMakeLists.txt  MAPost.cpp  MAPost.h  MAPost.vcproj  MAPostCOM.cpp  dlldata.c
Source/MAPostLib/: CMakeLists.txt  Fio.cpp  MAPostInit.cpp  MAPostLib.vcproj  MAPostMain.cpp  MAPostMain.h  MapostNumbers.cpp  PostLemWord.cpp  PostLemWord.h  PostMorphInterface.h
Source/MorphCorpusCreator/: Main.cpp  MorphCorpusCreator.cpp  MorphCorpusCreator.h  MorphCorpusCreator.vcproj  SemanticMarkup.cpp  SemanticMarkup.h  StdAfx.cpp
Source/MorphGen/: CMakeLists.txt  Makefile  MorphGen.cpp  MorphGen.vcproj
Source/MorphWizardLib/: CMakeLists.txt  DumpParadigm.cpp  FormInfo.cpp  FormInfo.h  MorphWizardLib.vcproj  OperationMeter.h  wizard.cpp  wizard.h
Source/Morphwizard/: AccentModelDiff.cpp  AccentWizardDlg.h  CMakeLists.txt  ChangeAllDlg.cpp  ChangeAllDlg.h  ColorRichEditView.cpp  ColorRichEditView.h  DlgDelAnc.cpp  FileEditCtrl.cpp  FileEditCtrl.h  GriIni.cpp  InputBox.cpp  InputBox.h  ListCtrlToolTip.cpp  ListCtrlToolTip.h  MDITabs.cpp  MDITabs.h  Morphwizard.cpp  Morphwizard.rc  Morphwizard.vcproj  MorphwizardDoc.cpp  MorphwizardView.cpp  MorphwizardView.h  ParadigmDifferences.cpp  QueryHistory.h  ReadMe.txt  SLFDocument.cpp  SLFDocument.h  SLFView.cpp  SLFView.h  SizeFormView.h  SyntaxColorizer.cpp  TTListbox.h  resource.h  stdafx.cpp  stdafx.h  tooltip2.cpp
Source/PCRE/: CMakeLists.txt  libs-pcre.vcproj  pcre.h  pcre_chartables.cpp  pcre_compile.cpp  pcre_dfa_exec.cpp  pcre_exec.cpp  pcre_fullinfo.cpp  pcre_get.cpp  pcre_internal.h  pcre_ord2utf8.cpp  pcre_rml.cpp  pcre_stringpiece.h  pcre_study.cpp  pcre_valid_utf8.cpp  pcreposix.cpp  pcreposix.h
Source/RmlThesLib/: CMakeLists.txt  Concepts.cpp  Makefile  Models.cpp  Models.h  Relats.cpp  RmlThesConsts.h  RmlThesLib.vcproj  StdRmlThes.h  Synonyms.cpp  Termins.cpp  ThesOborots.cpp  Thesaurus.cpp  Thesaurus.h
Source/RossDev/: ArticleDoc.cpp  ArticleDoc.h  ArticleView.cpp  ArticleView.h  BasicDomenEdit.cpp  BasicDomenEdit.h  CMakeLists.txt  CntrItem.h  FieldEditor.cpp  FieldList.cpp  FieldsListEditor.cpp  FindByStrDlg.cpp  FindByStrDlg.h  FindWrongRefs.cpp  FormulaEditor.cpp  FormulaEditor.h  GridCtrl.cpp  GridCtrl.h  Hierarchy.cpp  Hierarchy.h  HierarchyDoc.cpp  ImportForm.cpp  ImportForm.h  MainFrm.cpp  NewRefArticles.cpp  NewTextEntry.cpp  PocketForm.cpp  PocketForm.h  PosChoicer.cpp  PosChoicer.h  ProgressForm.h  (+29 more)
trunk/: CMakeLists.txt  build.sh  buildsoft.sh  readme  setrml.sh
(+4407 files in other folders)
